Adicionada rota de Pedidos. Funcionando até pagamento

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -2,6 +2,55 @@
 
 
 /*************************
+*******Switches******
+**************************/
+
+.material-switch > input[type="checkbox"] {
+    display: none;   
+}
+
+.material-switch > label {
+    cursor: pointer;
+    height: 0px;
+    position: relative; 
+    width: 40px;  
+}
+
+.material-switch > label::before {
+    background: rgb(0, 0, 0);
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    content: '';
+    height: 16px;
+    margin-top: -8px;
+    position:absolute;
+    opacity: 0.3;
+    transition: all 0.4s ease-in-out;
+    width: 40px;
+}
+.material-switch > label::after {
+    background: rgb(255, 255, 255);
+    border-radius: 16px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+    content: '';
+    height: 24px;
+    left: -4px;
+    margin-top: -8px;
+    position: absolute;
+    top: -4px;
+    transition: all 0.3s ease-in-out;
+    width: 24px;
+}
+.material-switch > input[type="checkbox"]:checked + label::before {
+    background: inherit;
+    opacity: 0.5;
+}
+.material-switch > input[type="checkbox"]:checked + label::after {
+    background: inherit;
+    left: 20px;
+}
+
+/*************************
 *******Typography******
 **************************/
 
@@ -115,7 +164,7 @@ a:focus {
 }
 
 body > section {
-  padding: 70px 0;
+  padding: 70px 0 0 0;
 }
 
 .center {
@@ -2466,6 +2515,7 @@ shortcodes page css
   background: #f5f5f5;
   border-bottom: 5px solid #c52d2f;
   font-size: 14px;
+  width: 100%;
 }
 
 #bottom h3 {
@@ -2504,6 +2554,7 @@ shortcodes page css
   padding-bottom: 30px;
   color: #fff;
   background: #2e2e2e;
+  width: 100%;
 }
 
 #footer a {
