--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,6 +1,23 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,300,800);
 
 
+html,
+body { height: 100%; }
+
+body {
+  display: table;
+  width: 100%;
+}
+
+.page-row {
+  display: table-row;
+  height: 100px;
+}
+
+.main { padding-top: 30px; }
+
+.page-row-expanded { height: 100%;  }
+
 /*************************
 *******Switches******
 **************************/
@@ -1569,9 +1586,8 @@ ul.social_icons li  a i{
 
 .footer {
   background: none repeat scroll 0 0 #2E2E2E;
-  border-top: 5px solid #C52D2F;
-  height: 84px;
-  margin-top: 110px;
+  height: 50px;
+  margin-top: 40px;
 }
 
 .footer_left {
@@ -2520,7 +2536,7 @@ shortcodes page css
 
 #bottom h3 {
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   text-transform: uppercase;
   font-size:22px;
   color: #000;
@@ -2555,6 +2571,7 @@ shortcodes page css
   color: #fff;
   background: #2e2e2e;
   width: 100%;
+  border-top: 5px solid #c52d2f;
 }
 
 #footer a {
