--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,5 +1,20 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,300,800);
 
+/* tables */
+
+thead > tr > td {
+	font-weight: bold;
+}
+
+thead {
+	border-bottom: 2px solid #c52d2f;
+}
+
+tr > td {
+	text-align: center;
+}
+
+/* Sticky footer */
 
 html,
 body { height: 100%; }
