--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,6 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,300,800);
 
-/* tables */
+/*****************/
+/* Tables */
+/*****************/
 
 thead > tr > td {
 	font-weight: bold;
@@ -22,7 +24,9 @@ tr > td {
 	padding: 5px;
 }
 
+/*****************/
 /* Sticky footer */
+/*****************/
 
 html,
 body { height: 100%; }
@@ -2616,7 +2620,27 @@ shortcodes page css
   margin-left: 15px;
 }
 
+/**********************/
+/*  Ajustes no navbar */
+/**********************/
 
+.navbar > .container .navbar-brand,
+  	.navbar > .container-fluid .navbar-brand {
+	    margin-left: 20px;
+	    margin-bottom: 10px;
+}
+
+/* navbar not collapsed */
+@media (min-width: 768px) {
+	.navbar > .container .navbar-brand,
+  	.navbar > .container-fluid .navbar-brand {
+	    margin-left: 30px;
+	 }
+	  
+	 #menu-collapse {
+	 	margin-right: 60px;
+	 } 
+}
 
 
 
